--- a/ConstructServices.csproj
+++ b/ConstructServices.csproj
@@ -1,224 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <LangVersion>preview</LangVersion>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D2E600F8-F2AE-4CDC-A3A9-8E74D16810D5}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConstructServices</RootNamespace>
-    <AssemblyName>ConstructServices</AssemblyName>
-    <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
+    <TargetFramework>netstandard2.0</TargetFramework>
+	<LangVersion>latest</LangVersion>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <LangVersion>preview</LangVersion>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <LangVersion>preview</LangVersion>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="JetBrains.Annotations" Version="2025.2.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Authentication\Actions\ChangePassword.cs" />
-    <Compile Include="Authentication\Actions\ChangePlayerName.cs" />
-    <Compile Include="Authentication\Actions\DeleteAvatar.cs" />
-    <Compile Include="Authentication\Actions\DeletePlayer.cs" />
-    <Compile Include="Authentication\Actions\Disconnect.cs" />
-    <Compile Include="Authentication\Actions\EndSession.cs" />
-    <Compile Include="Authentication\Actions\ForceLink.cs" />
-    <Compile Include="Authentication\Actions\GetLoginProviders.cs" />
-    <Compile Include="Authentication\Actions\GetPlayer.cs" />
-    <Compile Include="Authentication\Actions\GetPlayers.cs" />
-    <Compile Include="Authentication\Actions\GetSession.cs" />
-    <Compile Include="Authentication\Actions\LinkLoginProvider.cs" />
-    <Compile Include="Authentication\Actions\RefreshSession.cs" />
-    <Compile Include="Authentication\Actions\RegisterPlayer.cs" />
-    <Compile Include="Authentication\Actions\SetAvatar.cs" />
-    <Compile Include="Authentication\Actions\SetPlayerRestrictions.cs" />
-    <Compile Include="Authentication\Actions\SetUsernamePassword.cs" />
-    <Compile Include="Authentication\Actions\SignIn.cs" />
-    <Compile Include="Authentication\Actions\SignInPoll.cs" />
-    <Compile Include="Authentication\AuthenticationService.cs" />
-    <Compile Include="Authentication\Config.cs" />
-    <Compile Include="Authentication\Enums\PlayerOrdering.cs" />
-    <Compile Include="Authentication\Enums\PlayerRestrictions.cs" />
-    <Compile Include="Authentication\Functions.cs" />
-    <Compile Include="Authentication\Objects\ExpandedPlayer.cs" />
-    <Compile Include="Authentication\Objects\LoginProvider.cs" />
-    <Compile Include="Authentication\Objects\Player.cs" />
-    <Compile Include="Authentication\Objects\PlayerLoginProvider.cs" />
-    <Compile Include="Authentication\Objects\Session.cs" />
-    <Compile Include="Authentication\Responses\GetLoginProvidersResponse.cs" />
-    <Compile Include="Authentication\Responses\GetPlayerResponse.cs" />
-    <Compile Include="Authentication\Responses\GetPlayersResponse.cs" />
-    <Compile Include="Authentication\Responses\GetSessionResponse.cs" />
-    <Compile Include="Authentication\Responses\LinkLoginProviderResponse.cs" />
-    <Compile Include="Authentication\Responses\RegisterPlayerResponse.cs" />
-    <Compile Include="Authentication\Responses\SignInPollResponse.cs" />
-    <Compile Include="Authentication\Responses\SignInResponse.cs" />
-    <Compile Include="Broadcasts\Actions\CreateChannel.cs" />
-    <Compile Include="Broadcasts\Actions\CreateMessage.cs" />
-    <Compile Include="Broadcasts\Actions\Delete.cs" />
-    <Compile Include="Broadcasts\Actions\EditRatingDimension.cs" />
-    <Compile Include="Broadcasts\Actions\GetChannel.cs" />
-    <Compile Include="Broadcasts\Actions\GetChannels.cs" />
-    <Compile Include="Broadcasts\Actions\GetMessage.cs" />
-    <Compile Include="Broadcasts\Actions\GetMessages.cs" />
-    <Compile Include="Broadcasts\Actions\UpdateChannel.cs" />
-    <Compile Include="Broadcasts\Actions\UpdateMessage.cs" />
-    <Compile Include="Broadcasts\BroadcastService.cs" />
-    <Compile Include="Broadcasts\Config.cs" />
-    <Compile Include="Broadcasts\Objects\Channel.cs" />
-    <Compile Include="Broadcasts\Objects\Message.cs" />
-    <Compile Include="Broadcasts\Responses\ChannelResponse.cs" />
-    <Compile Include="Broadcasts\Responses\ChannelsResponse.cs" />
-    <Compile Include="Broadcasts\Actions\CreateRatingDimension.cs" />
-    <Compile Include="Broadcasts\Actions\DeleteRatingDimension.cs" />
-    <Compile Include="Broadcasts\Responses\MessageResponse.cs" />
-    <Compile Include="Broadcasts\Responses\MessagesResponse.cs" />
-    <Compile Include="CloudSave\Actions\GameBuckets\CreateRatingDimension.cs" />
-    <Compile Include="CloudSave\Actions\GameBuckets\DeleteRatingDimension.cs" />
-    <Compile Include="CloudSave\Actions\GameBuckets\EditRatingDimension.cs" />
-    <Compile Include="Broadcasts\Actions\GetRatingDimensions.cs" />
-    <Compile Include="CloudSave\Actions\DeletePicture.cs" />
-    <Compile Include="CloudSave\Actions\GameBuckets\GetRatingDimensions.cs" />
-    <Compile Include="CloudSave\Actions\GetBlobBytes.cs" />
-    <Compile Include="CloudSave\Actions\SetPicture.cs" />
-    <Compile Include="CloudSave\Actions\GameBuckets\Create.cs" />
-    <Compile Include="CloudSave\Actions\Create.cs" />
-    <Compile Include="CloudSave\Actions\GameBuckets\Delete.cs" />
-    <Compile Include="CloudSave\Actions\Delete.cs" />
-    <Compile Include="CloudSave\Actions\GameBuckets\Edit.cs" />
-    <Compile Include="CloudSave\Actions\GameBuckets\Get.cs" />
-    <Compile Include="CloudSave\Actions\GameBuckets\GetCloudSaves.cs" />
-    <Compile Include="CloudSave\Actions\GameBuckets\GetBuckets.cs" />
-    <Compile Include="CloudSave\Actions\Get.cs" />
-    <Compile Include="CloudSave\Actions\GetPlayerCloudSaves.cs" />
-    <Compile Include="CloudSave\Actions\Rate.cs" />
-    <Compile Include="CloudSave\CloudSaveService.cs" />
-    <Compile Include="CloudSave\Config.cs" />
-    <Compile Include="CloudSave\Enums\GameBucketAccessMode.cs" />
-    <Compile Include="CloudSave\Enums\GetBucketsSortMethod.cs" />
-    <Compile Include="CloudSave\Enums\GetCloudSavesMode.cs" />
-    <Compile Include="CloudSave\Enums\GetCloudSavesOrderMethod.cs" />
-    <Compile Include="CloudSave\Objects\CloudSave.cs" />
-    <Compile Include="CloudSave\Objects\GameBucket.cs" />
-    <Compile Include="CloudSave\Responses\BucketResponse.cs" />
-    <Compile Include="CloudSave\Responses\BucketsResponse.cs" />
-    <Compile Include="CloudSave\Responses\CloudSaveResponse.cs" />
-    <Compile Include="CloudSave\Responses\CloudSavesResponse.cs" />
-    <Compile Include="Common\AvailablePicture.cs" />
-    <Compile Include="Common\BaseService.cs" />
-    <Compile Include="Common\Functions.cs" />
-    <Compile Include="Common\Language.cs" />
-    <Compile Include="Common\Pagination.cs" />
-    <Compile Include="Common\PictureData.cs" />
-    <Compile Include="Common\Request.cs" />
-    <Compile Include="Common\Thing.cs" />
-    <Compile Include="Common\Validators.cs" />
-    <Compile Include="GlobalConfig.cs" />
-    <Compile Include="Leaderboards\Actions\AdjustScore.cs" />
-    <Compile Include="Leaderboards\Actions\DeleteScore.cs" />
-    <Compile Include="Leaderboards\Actions\GetNewestScores.cs" />
-    <Compile Include="Leaderboards\Actions\GetPlayerScores.cs" />
-    <Compile Include="Leaderboards\Actions\GetScoreHistory.cs" />
-    <Compile Include="Leaderboards\Actions\GetScoreNeighbours.cs" />
-    <Compile Include="Leaderboards\Actions\GetScores.cs" />
-    <Compile Include="Leaderboards\Actions\PostScore.cs" />
-    <Compile Include="Leaderboards\Actions\ShadowBan.cs" />
-    <Compile Include="Leaderboards\Actions\ShadowBansGetIPs.cs" />
-    <Compile Include="Leaderboards\Actions\ShadowBansGetPlayerIDs.cs" />
-    <Compile Include="Leaderboards\Actions\ShadowBansRemove.cs" />
-    <Compile Include="Leaderboards\Actions\TeamGet.cs" />
-    <Compile Include="Leaderboards\Actions\TeamsAssignPlayer.cs" />
-    <Compile Include="Leaderboards\Actions\TeamsCreate.cs" />
-    <Compile Include="Leaderboards\Actions\TeamsDelete.cs" />
-    <Compile Include="Leaderboards\Actions\TeamsGet.cs" />
-    <Compile Include="Leaderboards\Actions\TeamsGetPlayers.cs" />
-    <Compile Include="Leaderboards\Actions\TeamsRemovePlayer.cs" />
-    <Compile Include="Leaderboards\Actions\TeamsRename.cs" />
-    <Compile Include="Leaderboards\Config.cs" />
-    <Compile Include="Leaderboards\Enums\ScoreRange.cs" />
-    <Compile Include="Leaderboards\Enums\TeamsOrdering.cs" />
-    <Compile Include="Leaderboards\LeaderboardService.cs" />
-    <Compile Include="Leaderboards\Objects\Leaderboard.cs" />
-    <Compile Include="Leaderboards\Objects\Pagination.cs" />
-    <Compile Include="Leaderboards\Objects\Score.cs" />
-    <Compile Include="Leaderboards\Objects\ScoreHistory.cs" />
-    <Compile Include="Leaderboards\Objects\ShadowBan.cs" />
-    <Compile Include="Leaderboards\Objects\Team.cs" />
-    <Compile Include="Leaderboards\Objects\TeamPlayer.cs" />
-    <Compile Include="Leaderboards\Objects\Tier.cs" />
-    <Compile Include="Common\PaginationOptions.cs" />
-    <Compile Include="Leaderboards\RequestPerspective.cs" />
-    <Compile Include="Common\BaseResponse.cs" />
-    <Compile Include="Leaderboards\Responses\CreateTeamResponse.cs" />
-    <Compile Include="Leaderboards\Responses\DeleteScoresResponse.cs" />
-    <Compile Include="Leaderboards\Responses\GetScoreHistoryResponse.cs" />
-    <Compile Include="Leaderboards\Responses\GetScoreNeighboursResponse.cs" />
-    <Compile Include="Leaderboards\Responses\GetScoreResponse.cs" />
-    <Compile Include="Leaderboards\Responses\GetShadowBansResponse.cs" />
-    <Compile Include="Leaderboards\Responses\GetTeamPlayersResponse.cs" />
-    <Compile Include="Leaderboards\Responses\GetTeamResponse.cs" />
-    <Compile Include="Leaderboards\Responses\GetTeamsResponse.cs" />
-    <Compile Include="Leaderboards\Responses\PostScoreResponse.cs" />
-    <Compile Include="Leaderboards\Responses\ShadowBanResponse.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ratings\Actions\CreateRatingDimension.cs" />
-    <Compile Include="Ratings\Actions\DeleteRatingDimension.cs" />
-    <Compile Include="Ratings\Actions\EditRatingDimension.cs" />
-    <Compile Include="Ratings\Actions\GetRatingDimensions.cs" />
-    <Compile Include="Ratings\Actions\Rate.cs" />
-    <Compile Include="Ratings\Objects\Rating.cs" />
-    <Compile Include="Ratings\Objects\RatingAggregate.cs" />
-    <Compile Include="Ratings\Objects\RatingDimension.cs" />
-    <Compile Include="Ratings\Objects\RatingStatus.cs" />
-    <Compile Include="Ratings\Responses\RateResponse.cs" />
-    <Compile Include="Ratings\Responses\DimensionResponse.cs" />
-    <Compile Include="Ratings\Responses\SlotsResponse.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="JetBrains.Annotations">
-      <Version>2025.2.2</Version>
-    </PackageReference>
-    <PackageReference Include="Newtonsoft.Json">
-      <Version>13.0.4</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ConstructServices.nuspec" />
-    <None Include="README.md" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="CHANGELOG.md" />
-    <Content Include="LICENSE.txt" />
-    <None Include="VERSION" />
-  </ItemGroup>
-  <ItemGroup />
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
