--- a/ConstructServices.csproj
+++ b/ConstructServices.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
 	<LangVersion>latest</LangVersion>
+	<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+	<Title>ConstructServices</Title>
+	<Version>1.1.0</Version>
+	<Company>Scirra</Company>
   </PropertyGroup>
 
   <ItemGroup>
